--- a/.mgx/config.yaml
+++ b/.mgx/config.yaml
@@ -1,4 +1,4 @@
-build: null
-build_path: null
-dev: npm run dev
-install: npm install
+build: pnpm run build
+build_path: dist
+dev: pnpm run dev
+install: pnpm install
