--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "dotenv": "^17.2.0",
     "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^12.23.10",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
