--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@supabase/supabase-js": "^2.51.0",
+    "@supabase/supabase-js": "^2.52.1",
     "@tanstack/react-query": "^5.56.2",
     "@types/uuid": "^10.0.0",
     "bootstrap": "^5.3.7",
@@ -53,6 +53,7 @@
     "dotenv": "^17.2.0",
     "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^12.23.10",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
